--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,635 @@
-.App {
-  text-align: center;
+* {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  text-decoration: none;
+  overflow: hidden;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.cont {
+  width: 99%;
+  height: 100vh;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.row {
+  display: flex;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.col1 {
+  width: 20%;
+  height: 100vh;
+  background-color: #fff;
+  border-right: 1px solid #dddddd;
+}
+
+#logo {
+  margin-left: 15%;
+  color: #dedddd;
+  margin-top: 20px;
+}
+
+.col1 ol li {
+  width: 100%;
+  height: 7vh;
+
+  margin-top: 20px;
+  border-radius: 5px;
+}
+
+.col1 ol li {
+  padding-top: 10px;
+}
+
+.col1 ol li a {
+  text-decoration: none;
+  font-size: 22px;
+  color: black;
+  margin-left: 5%;
+}
+
+.col1 ol li:hover {
+  background-color: #d3d2fa;
+}
+
+.col1 ol li:hover a {
+  color: blue;
+}
+
+
+
+.sideimgbox {
+  width: 100%;
+  height: 30vh;
+  margin-top: 50px;
+  bottom: 0;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.sideimgbox h4 {
+  font-size: 16px;
+  margin-top: 1rem;
+}
+
+.sideimgbox p {
+  font-size: 16px;
+  margin-top: -.9rem;
+
+}
+
+.sideimg {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+
+}
+
+.col2 {
+  width: 80%;
+  height: 100vh;
+  /* background-color: rgb(81, 238, 186); */
+}
+
+
+
+/********************* Right side ***************/
+.subcol {
   display: flex;
   flex-direction: column;
+}
+
+.scol1 {
+  width: 100%;
+  height: 10vh;
+  margin-top: 10px;
+  /* background-color: antiquewhite; */
+}
+
+.scol1 h2 {
+  font-size: 40px;
+  padding: 5px;
+
+}
+
+.scol2 {
+  width: 100%;
+  height: 8vh;
+  /* background-color: rgb(218, 144, 49); */
+  display: flex;
+  border-bottom: 1px solid #dddddd;
+}
+
+.closebtn {
+  width: 20%;
+  height: 8vh;
+  /* background-color: rgb(114, 77, 189); */
+}
+
+.pencom {
+  width: 80%;
+  height: 8vh;
+  /* background-color: rgb(77, 189, 189); */
+  display: flex;
+}
+
+.pen1 li {
+  width: 120px;
+  height: 8vh;
+  /* background-color: rgb(198, 44, 198); */
+  text-align: center;
+  font-size: 20px;
+  color: blue;
+  border-bottom: 3px solid blue;
+  padding-top: 10px;
+  cursor: pointer;
+
+}
+
+.pen1 li:visited {
+  border-bottom: 3px solid blue;
+  color: blue;
+}
+
+.pen2 li {
+  width: 120px;
+  height: 8vh;
+  /* background-color: rgb(198, 103, 44); */
+  text-align: center;
+  font-size: 20px;
+  color: #ADADAD;
+  padding-top: 10px;
+  cursor: pointer;
+}
+
+.pen2 li:hover {
+  border-bottom: 3px solid blue;
+  color: blue;
+}
+
+.scol3 {
+  width: 100%;
+  height: 8vh;
+  /* background-color: rgb(215, 245, 250); */
+}
+
+.scol4 {
+  width: 100%;
+  height: 70vh;
+  /* background-color: rgb(217, 250, 215); */
+  position: relative;
+}
+
+.scol5 {
+  width: 79%;
+  height: 70vh;
+  background-color: #fff;
+  margin-top: -33.5%;
+  margin-left: 100%;
+  z-index: 700;
+  /* transition: all linear .5s; */
+  position: absolute;
+}
+
+.activeslide5 {
+  margin-left: 0;
+}
+
+.closeBtn {
+  width: 170px;
+  height: 40px;
+  padding: 5px;
+  margin-left: 15%;
+  margin-top: 5px;
+  border: 0;
+  border-radius: 5px;
+  background-color: rgb(252, 204, 204);
+  display: flex;
+}
+
+.closeBtn a{
+  text-decoration: none;
+  color: red;
+  font-size: 20px;
+}
+
+.fa-circle-xmark {
+  margin-right: 5px;
+  padding: 5px;
+  /* background-color: #009879; */
+  margin-top: 2px;
+  color: red;
+
+}
+
+
+
+.modal {
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  display: flex;
+  justify-content: center; 
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: rgba(51, 55, 55, 0.7);
+  transition: all 0.4s;
+  visibility: hidden;
+  opacity: 0;
+}
+.content {
+  position: absolute;
+  background: white;
+  width: 476px;
+  height: 465px;
+  padding: 1em 2em;
+  border-radius: 4px;
+} 
+.modal:target {
+  visibility: visible;
+  opacity: 1;
+}
+.box-close {
+  position: absolute;
+  top: 0;
+  right: 15px;
+  color: #1f1c1c;
+  text-decoration: none;
+  font-size: 30px;
 }
 
-.App-link {
-  color: #61dafb;
+.last-form-btn {
+  top: 0;
+  right: 15px;
+  color: #1f1c1c;
+  text-decoration: none;
+  font-size: 30px;
 }
 
-@keyframes App-logo-spin {
+.radiorow{
+  display: flex;
+  margin-top: 10px;
+}
+
+.radiobtnbox{
+  margin-left: 10px;
+  /* background-color: #006540; */
+  margin-top: 8px;
+}
+
+input[type=radio] {
+  accent-color: blue;
+  outline: none;
+  border: 0;
+}
+
+.radioBtn{
+  display: flex;
+  justify-content: space-evenly;
+  padding: 5px;
+  margin-left: 10px;
+  color: black;
+}
+
+.rb1{
+  margin-right: 20px;
+}
+
+label{
+  color: #777676;
+  margin-top: 12px;
+}
+
+#uartxt{
+  color: black;
+}
+
+.lastfbox{
+  display: flex;
+}
+.chargefee{
+  margin-top: 10px;
+  color: #777676;
+}
+
+#formcbtn{
+  width: 160px;
+  margin-left: 20%;
+}
+
+#chargetxt{
+  font-size: 10px;
+}
+
+.formBtn{
+  margin-left: 93px;
+  width: 170px;
+  margin-top: 10px;
+  height: 45px;
+  background-color: #E4E4E4;
+  color: #777676;
+  border-radius: 5px;
+  padding-top: 8px;
+}
+
+.formBtn a{
+  text-decoration: none;
+  color: #777676;
+  padding-left: 20px;
+  padding-top: 30px;
+  font-size: 18px;
+}
+
+
+
+
+
+
+.barbox {
+  display: flex;
+  align-items: center;
+}
+
+.bcol1 {
+  width: 40%;
+  height: 5vh;
+  /* background-color: aquamarine; */
+  border-radius: 5px;
+  margin-left: 2%;
+  margin-top: 12px;
+  border: 1px solid #dddddd;
+}
+
+.brow{
+  display: flex;
+}
+
+.fa-magnifying-glass {
+  width: 5%;
+  height: 5vh;
+  margin-left: 5px;
+  margin-top: 10px;
+  /* background-color: #009879; */
+  padding: 2px;
+  color: #7e7d7d;
+  font-size: 15px;
+}
+
+.bcol1 input {
+  /* width: 430px; */
+  width: 90%;
+  height: 20px;
+  height: 4vh;
+  /* background-color: red; */
+  padding-left: 10px;
+  outline: none;
+  margin-top: 4px;
+  border: 0;
+}
+
+
+/* Dropdowns */
+
+.select-menu {
+  max-width: 330px;
+}
+
+.select-menu .select-btn {
+  display: flex;
+  height: 30px;
+  margin-left: 10px;
+  margin-top: 10px;
+  background: #F5F5F5;
+  padding: 20px;
+  padding-top: -10px;
+  font-size: 16px;
+  font-weight: 400;
+  border-radius: 8px;
+  align-items: center;
+  justify-content: space-between;
+  cursor: pointer;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+  color: #7e7d7d;
+}
+
+#arrowDn {
+  color: #7e7d7d;
+  margin-left: 10px;
+  margin-top: 2px;
+  font-size: 15px;
+}
+
+#arrowUp {
+  color: #7e7d7d;
+  margin-left: 10px;
+  margin-top: 2px;
+  font-size: 15px;
+}
+
+.select-menu .options {
+  position: absolute;
+  width: 330px;
+  overflow-y: auto;
+  max-height: 295px;
+  padding: 10px;
+  margin-top: 10px;
+  border-radius: 8px;
+  background: #fff;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  animation-name: fadeInDown;
+  -webkit-animation-name: fadeInDown;
+  animation-duration: 0.35s;
+  animation-fill-mode: both;
+  -webkit-animation-duration: 0.35s;
+  -webkit-animation-fill-mode: both;
+
+}
+
+.select-menu .options .option {
+  display: flex;
+  height: 55px;
+  cursor: pointer;
+  padding: 0 16px;
+  border-radius: 8px;
+  align-items: center;
+  background: #fff;
+  color: #7e7d7d;
+
+}
+
+.select-menu .options .option:hover {
+  background-color: rgb(216, 216, 247);
+}
+
+.select-menu .options .option:hover .option-text {
+  color: black;
+}
+
+.select-menu .options .option i {
+  font-size: 25px;
+  margin-right: 12px;
+}
+
+.select-menu .options .option .option-text {
+  font-size: 18px;
+  color: #7e7d7d;
+}
+
+.select-btn i {
+  font-size: 25px;
+  transition: 0.3s;
+}
+
+.select-menu.active .select-btn i {
+  transform: rotate(-180deg);
+}
+
+.select-menu.active .options {
+  display: block;
+  opacity: 0;
+  z-index: 10;
+  animation-name: fadeInUp;
+  -webkit-animation-name: fadeInUp;
+  animation-duration: 0.4s;
+  animation-fill-mode: both;
+  -webkit-animation-duration: 0.4s;
+  -webkit-animation-fill-mode: both;
+}
+
+@keyframes fadeInUp {
   from {
-    transform: rotate(0deg);
+      transform: translate3d(0, 30px, 0);
   }
+
   to {
-    transform: rotate(360deg);
+      transform: translate3d(0, 0, 0);
+      opacity: 1;
   }
+}
+
+@keyframes fadeInDown {
+  from {
+      transform: translate3d(0, 0, 0);
+      opacity: 1;
+  }
+
+  to {
+      transform: translate3d(0, 20px, 0);
+      opacity: 0;
+  }
+}
+
+
+
+
+/* tables */
+
+.content-table {
+  border-collapse: collapse;
+  margin: 25px 0;
+  font-size: 0.9em;
+  min-width: 99%;
+  max-height: 100vh;
+  border-radius: 5px 5px 0 0;
+  overflow: hidden;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+  margin-left: .5%;
+}
+
+.content-table thead tr {
+  background-color: #F5F5F5;
+  color: black;
+  text-align: left;
+  font-weight: bold;
+  border: 1px solid #dddddd;
+}
+
+.content-table th,
+.content-table td {
+  padding: 10px 12px 5px 12px;
+
+}
+
+
+.content-table tbody tr {
+  border: 1px solid #dddddd;
+
+}
+
+
+.tr1 h4 {
+  font-size: 16px;
+  font-weight: bold;
+}
+
+.tr1 p {
+  font-size: 12px;
+  color: #7e7d7d;
+  margin-top: -0.5rem;
+}
+
+.fa-arrow-up-right-from-square {
+  color: blue;
+}
+
+.fa-sort {
+  margin-left: 5px;
+}
+
+.medicircle {
+  color: #88670F;
+  margin-right: 5px;
+}
+
+.medtxt {
+  color: #88670F;
+}
+
+.higtxt {
+  color: #7D2424;
+}
+
+.higcircle {
+  color: #7D2424;
+  margin-right: 5px;
+
+}
+
+.lowtxt {
+  color: #006540;
+}
+
+.lowcircle {
+  color: #006540;
+  margin-right: 5px;
+
+}
+
+.nrmtxt {
+  color: black;
+  font-weight: bold;
+}
+
+.lgtxt {
+  color: #7e7d7d;
+  font-weight: bold;
+}
+
+/* .content-table tbody tr:nth-of-type(even) {
+  background-color: #f3f3f3;
+} */
+
+.content-table tbody tr:last-of-type {
+  border-bottom: 1px solid #dddddd;
+}
+
+.content-table tbody tr.active-row {
+  font-weight: bold;
+  color: #009879;
+}
+
+.content h1{
+  color: rgb(18, 21, 18);
+  font-size: 25px;
 }
